--- a/kythe/rust/indexer/cargo/Cargo.toml
+++ b/kythe/rust/indexer/cargo/Cargo.toml
@@ -26,6 +26,7 @@ path = "../src/lib.rs"
 protobuf = "=2.8.2"
 quick-error = "1.2.3"
 zip = "0.5.6"
+rls-data = "0.19.0"
 
 [raze]
 workspace_path = "//kythe/rust/indexer/cargo"
@@ -39,12 +40,6 @@ target = "x86_64-unknown-linux-gnu"
 [raze.crates.protobuf.'2.8.2']
 patches = ["@io_bazel_rules_rust//proto/raze/patch:protobuf-2.8.2.patch"]
 patch_args = ["-p1"]
-
-[raze.crates.lexical-core.'0.6.7']
-gen_buildrs = true
-
-[raze.crates.bstr.'0.2.13']
-data_attr = 'glob(["**/*.dfa"])'
 
 [raze.crates.bzip2-sys.'0.1.9+1.0.8']
 gen_buildrs = true
