Begin work on save_analysis-based indexer

--- a/kythe/rust/indexer/BUILD
+++ b/kythe/rust/indexer/BUILD
@@ -15,6 +15,7 @@ rust_library(
     "//kythe/rust/indexer/cargo:quick_error",
     "//kythe/rust/indexer/cargo:zip",
     "//kythe/rust/indexer/cargo:rls_data",
+    "//kythe/rust/indexer/cargo:rls_analysis",
   ] + PROTO_COMPILE_DEPS,
   edition = "2018",
 )
@@ -31,6 +32,7 @@ rust_binary(
     "//kythe/proto:storage_rust_proto",
     "//kythe/rust/indexer/cargo:tempfile",
     "//kythe/rust/indexer/cargo:anyhow",
+    "//kythe/rust/indexer/cargo:protobuf",
   ],
   edition = "2018",
 )
