--- a/kythe/rust/indexer/cargo/Cargo.toml
+++ b/kythe/rust/indexer/cargo/Cargo.toml
@@ -27,6 +27,7 @@ protobuf = "=2.8.2"
 quick-error = "1.2.3"
 zip = "0.5.6"
 rls-data = "0.19.0"
+rls-analysis = "0.18.1"
 tempfile = "3.1.0"
 anyhow = "1.0"
 
@@ -44,4 +45,7 @@ patches = ["@io_bazel_rules_rust//proto/raze/patch:protobuf-2.8.2.patch"]
 patch_args = ["-p1"]
 
 [raze.crates.bzip2-sys.'0.1.9+1.0.8']
+gen_buildrs = true
+
+[raze.crates.proc-macro2.'1.0.18']
 gen_buildrs = true
