--- a/kythe/rust/indexer/cargo/Cargo.toml
+++ b/kythe/rust/indexer/cargo/Cargo.toml
@@ -30,6 +30,7 @@ rls-data = "0.19.0"
 rls-analysis = "0.18.1"
 tempfile = "3.1.0"
 anyhow = "1.0"
+lazy_static = "1.4.0"
 
 [raze]
 workspace_path = "//kythe/rust/indexer/cargo"
