--- a/kythe/rust/indexer/cargo/BUILD
+++ b/kythe/rust/indexer/cargo/BUILD
@@ -11,32 +11,35 @@ licenses([
 alias(
     name = "anyhow",
     actual = "@raze__anyhow__1_0_31//:anyhow",
-)
-alias(
-    name = "lazy_static",
-    actual = "@raze__lazy_static__1_4_0//:lazy_static",
+    tags = ["cargo-raze"],
 )
 alias(
     name = "protobuf",
     actual = "@raze__protobuf__2_8_2//:protobuf",
+    tags = ["cargo-raze"],
 )
 alias(
     name = "quick_error",
     actual = "@raze__quick_error__1_2_3//:quick_error",
+    tags = ["cargo-raze"],
 )
 alias(
     name = "rls_analysis",
     actual = "@raze__rls_analysis__0_18_1//:rls_analysis",
+    tags = ["cargo-raze"],
 )
 alias(
     name = "rls_data",
     actual = "@raze__rls_data__0_19_0//:rls_data",
+    tags = ["cargo-raze"],
 )
 alias(
     name = "tempfile",
     actual = "@raze__tempfile__3_1_0//:tempfile",
+    tags = ["cargo-raze"],
 )
 alias(
     name = "zip",
     actual = "@raze__zip__0_5_6//:zip",
+    tags = ["cargo-raze"],
 )
